# dodui

./: .gitignore  Cargo.toml  compile.cmd  dodui.code-workspace
.cargo/: config
data/: cube_Pixel.fx  cube_Vertex.fx  text_Pixel.fx  text_Vertex.fx
shader/: cube.hlsl  text.hlsl
src/: color.rs  gfx_app.rs  layout_system.rs  main.rs  manager.rs  shade.rs  style_system.rs  styling.rs  transform_system.rs
src/data/: pixel.fx  vertex.fx
src/layout/: layout_system.rs  measure_system.rs  mod.rs
src/rendering/: material.rs  mod.rs
src/shader/: cube.hlsl  text.hlsl
src/transform/: global_transform.rs  mod.rs  parent.rs  transform.rs  transform_system.rs
style/: style.css
